fix: remove z-index on monta

--- a/embeded.css
+++ b/embeded.css
@@ -8,7 +8,7 @@
   background-color: #fef49c;
   -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
   -webkit-transition: all 300ms ease-in;
-  z-index: 65535;
+  /* z-index: 65535; */
 }
 .paste-monta__monta:before {
   content: "";
